[package]
name = "konflict"
version = "0.1.0"
edition = "2021"
authors = ["TITAN Softwork Solutions"]
license = "Attribution-NonCommercial-NoDerivatives 4.0 International"

[dependencies]
once_cell = "1.21.1"
lazy_static = "1.5.0"
rustc-hash = "2.1.1"
winapi = { version = "0.3.9", features = [
    "ntdef",
    "winbase",
    "minwindef",
    "handleapi",
    "winnt",
    "sysinfoapi",
    "fileapi",
    "processthreadsapi",
    "memoryapi",
    "synchapi",
    "errhandlingapi",
    "libloaderapi",
    "threadpoolapiset",
    "psapi"
] }

[lib]
name = "konflict"
path = "Container/dll.rs"
crate-type = ["cdylib"]

[[bin]]
name = "kfbench"
path = "Container/mark.rs"

[features]
default = []

[profile.release]
opt-level = "z"
lto = "thin"
strip = "symbols"
codegen-units = 1
debug = false
panic = "abort"
incremental = false